autocomplete dark mode fix

--- a/public/assets/sass/theme/_forms.scss
+++ b/public/assets/sass/theme/_forms.scss
@@ -379,6 +379,7 @@ body {
                         font-family: $fontFamily;
                         font-size: $fontSize;
                         padding: 0;
+                        color: $textColor;
                         margin: 0;
                     }
                 }
